snapshots/tests/invalid_syntax/invalid_declarations/function_missing_return_type_failures.snap
---
source: vb6parse/tests/invalid_syntax/invalid_declarations.rs
expression: failure_messages
---
[]
